crates/gorani_lex/src/snapshots/gorani_lex__tests__comments.snap
---
source: crates/gorani_lex/src/lib.rs
expression: tokens
---
[
    (
        COMMENT,
        5,
        "# foo",
    ),
]
