crates/gorani_lex/src/snapshots/gorani_lex__tests__floats_with_fraction_and_exponent.snap
---
source: crates/gorani_lex/src/lib.rs
expression: tokens
---
[
    (
        FLOAT_VALUE,
        5,
        "0.0e0",
    ),
    (
        IGNORED_TOKEN,
        1,
        " ",
    ),
    (
        FLOAT_VALUE,
        7,
        "123.0e0",
    ),
    (
        IGNORED_TOKEN,
        1,
        " ",
    ),
    (
        FLOAT_VALUE,
        9,
        "123.456e0",
    ),
    (
        IGNORED_TOKEN,
        1,
        " ",
    ),
    (
        FLOAT_VALUE,
        9,
        "123.0e456",
    ),
    (
        IGNORED_TOKEN,
        1,
        " ",
    ),
    (
        FLOAT_VALUE,
        11,
        "123.456e789",
    ),
    (
        IGNORED_TOKEN,
        1,
        " ",
    ),
    (
        FLOAT_VALUE,
        6,
        "-0.0e0",
    ),
    (
        IGNORED_TOKEN,
        1,
        " ",
    ),
    (
        FLOAT_VALUE,
        8,
        "-123.0e0",
    ),
    (
        IGNORED_TOKEN,
        1,
        " ",
    ),
    (
        FLOAT_VALUE,
        10,
        "-123.456e0",
    ),
    (
        IGNORED_TOKEN,
        1,
        " ",
    ),
    (
        FLOAT_VALUE,
        10,
        "-123.0e456",
    ),
    (
        IGNORED_TOKEN,
        1,
        " ",
    ),
    (
        FLOAT_VALUE,
        12,
        "-123.456e789",
    ),
]
