crates/gorani_lex/src/snapshots/gorani_lex__tests__ignored_tokens.snap
---
source: crates/gorani_lex/src/lib.rs
expression: tokens
---
[
    (
        IGNORED_TOKEN,
        5,
        " ,\t\n\r",
    ),
]
