crates/gorani_lex/src/snapshots/gorani_lex__tests__punctuators.snap
---
source: crates/gorani_lex/src/lib.rs
expression: tokens
---
[
    (
        SYMBOL_LEFT_PARENS,
        1,
        "(",
    ),
    (
        SYMBOL_RIGHT_PARENS,
        1,
        ")",
    ),
    (
        SYMBOL_COLON,
        1,
        ":",
    ),
    (
        SYMBOL_EQUAL,
        1,
        "=",
    ),
    (
        SYMBOL_AT,
        1,
        "@",
    ),
    (
        SYMBOL_DOLLAR,
        1,
        "$",
    ),
    (
        SYMBOL_AMPERSAND,
        1,
        "&",
    ),
    (
        SYMBOL_LEFT_BRACKET,
        1,
        "[",
    ),
    (
        SYMBOL_RIGHT_BRACKET,
        1,
        "]",
    ),
    (
        SYMBOL_LEFT_BRACE,
        1,
        "{",
    ),
    (
        SYMBOL_RIGHT_BRACE,
        1,
        "}",
    ),
    (
        SYMBOL_EXCLAMATION,
        1,
        "!",
    ),
    (
        SYMBOL_PIPE,
        1,
        "|",
    ),
    (
        SYMBOL_SPREAD,
        3,
        "...",
    ),
]
